--- a/css-files/index.css
+++ b/css-files/index.css
@@ -1,78 +1,97 @@
-.second-body {
-    display: flex;
-    justify-content: center;
+body {
+    padding-bottom: 1000px;
 }
 
-.suisei-potrait {
-    height: 700px;
+.background-1 {
+    left: 0;
+    top : 0;
+    width: 100%;
+    position: fixed;
+    opacity: 1;
+    z-index: -10;
 }
-
 .main-section {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     font-family: Ysabeau Office, Arial;
+    border: 1px solid rgba(255, 0, 0, 0);
+    margin-bottom: 200px
 }
 
 .main-suisei-pic {
-    border: 1px solid red;
-    margin-right: 270px;
+    border: 1px solid rgba(0, 0, 255, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    margin-right: 220px;
 }
 
 .suisei-potrait {
-    padding: 10px;
+    height: 500px;
 }
 
 .main-description {
-    border: 1px solid red;
-    width: 498px;
+    border: none;
+    border-radius: 20px;
+    width: 398px;
 }
 
 .main-suisei-name {
+    color: white;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 800;
     margin-bottom: 10px;
     margin-top: 30px;
 }
 
 .mini-description {
+    color: white;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     margin-top: 0px;
     margin-bottom: 0px;
 }
 
 .mini-description-author {
+    color: white;
     text-align: right;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     margin-top: 0px;
-    margin-bottom: 50px;
-    padding-right: 50px;
+    margin-bottom: 30px;
+    padding-right: 40px;
 }
 
 .suisei-gif {
-    margin-bottom: 20px;
+    width: 398px;
+    margin-bottom: 12px;
+    border-radius: 10px;
 }
 
 div.main-social-media {
-    width: 300px;
+    width: 240px;
     border-radius: 4px;
-    margin-left: 20px;
+    margin-left: 16px;
     transition: width 0.5s; 
     margin-bottom: 15px;
     display: grid;
     grid-template-columns: 50px 1fr;
+    background-color: rgb( 196, 156, 109);
+    box-shadow: 5px 5px 10px rgba(196, 156, 109, 0.5);
+    border: 2px solid white;
 }
 
 div.main-social-media:hover  {
-    width: 458px;
+    width: 366px;
     cursor: grab;
 }
 
 p.main-social-media {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 600;
     text-decoration: none;
     margin-top: 3px;
@@ -81,7 +100,7 @@ p.main-social-media {
 }
 
 a.main-social-media {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 600;
     color: white;
     text-decoration: none;
@@ -92,30 +111,10 @@ a:visited .social-media {
     color: white;
     text-decoration: none;
 }
- 
-
-.main-Youtube {
-    border: 2px solid rgb(274, 1, 1);
-    box-shadow: 5px 5px 10px rgba(274, 1, 1, 0.15);
-    background-color: rgb(274, 1, 1);
-}
 
 .app-logo {
-    padding: 10px;  
-    height: 30px;
+    padding: 8px;  
+    height: 24px;
 }
-
-.main-Twitter {
-    border: 2px solid rgb(3, 164, 236);
-    box-shadow: 5px 5px 10px rgba(3, 164, 236, 0.15);
-    background-color: rgb(3, 164, 236);
-}
-
-.main-Spotify {
-    border: 2px solid rgb(29, 208, 93);
-    box-shadow: 5px 5px 10px rgba(29, 208, 93, 0.15);
-    background-color: rgb(29, 208, 93);
-}
-
 
 
