--- a/css-files/index.css
+++ b/css-files/index.css
@@ -10,6 +10,12 @@ body {
     padding-bottom: 1000px;
 }
 
+.header-font {
+    color: white;
+    font-size: 40px;
+    font-weight: 800;
+}
+
 .background-1 {
     left: 0;
     top : 0;
@@ -46,10 +52,7 @@ body {
 }
 
 .main-suisei-name {
-    color: white;
     text-align: center;
-    font-size: 40px;
-    font-weight: 800;
     margin-bottom: 10px;
     margin-top: 30px;
 }
@@ -131,10 +134,7 @@ div.latest-release {
 }
 
 p.latest-release {
-    color: white;
     text-align: center;
-    font-size: 40px;
-    font-weight: 800;
 }
 
 div.album-container {
@@ -204,5 +204,9 @@ p.album-info {
 p.album-name {
     font-weight: 600;
     font-style: italic;
+}
+
+.latetst-mv-container {
+
 }
 
