--- a/css-files/index.css
+++ b/css-files/index.css
@@ -1,5 +1,6 @@
 :root {
     --main-color: rgb(196, 156, 109);
+    --red-border: rgba(255, 0, 0, 1);
 }
 
 p {
@@ -8,6 +9,7 @@ p {
 
 body {
     padding-bottom: 1000px;
+    background-color: black;
 }
 
 .header-font {
@@ -22,7 +24,7 @@ body {
     top : 0;
     width: 100%;
     position: fixed;
-    opacity: 1;
+    opacity: 0;
     z-index: -10;
 }
 
@@ -30,7 +32,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border: 1px solid rgba(255, 0, 0, 0);
+    border: 1px solid var(--red-border);
 }
 
 .main-suisei-pic {
@@ -131,7 +133,8 @@ a:visited .social-media {
 
 div.latest-release {
     margin-top: 40px;
-    border: 1px solid rgba(255, 0, 0, 0);
+    border: 1px solid var(--red-border);
+    padding-bottom: 20px;
 }
 
 p.latest-release {
@@ -207,7 +210,12 @@ p.album-name {
     font-style: italic;
 }
 
-.latetst-mv-container {
+.latest-mv-container {
+    margin-top: 40px;
+    border: 1px solid var(--red-border);
+}
 
+.latest-mv {
+    width: 900px;
 }
 
