--- a/css-files/timeline.css
+++ b/css-files/timeline.css
@@ -1,3 +1,24 @@
+.header {
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+p.header-1 {
+    margin-bottom: 0;
+}
+
+p.header-2 {
+    color: white;
+    margin-top: 0;
+}
+
+.text-timeline {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+
 * {
     box-sizing: border-box;
   }
@@ -14,7 +35,8 @@
     content: '';
     position: absolute;
     width: 6px;
-    background-color: white;
+    background-color: var(--main-color);
+    border: 2px solid white;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -36,8 +58,8 @@
     width: 25px;
     height: 25px;
     right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
+    border: 4px solid white;
+    background-color: var(--main-color);
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -75,7 +97,7 @@
     top: 22px;
     width: 0;
     z-index: 1;
-    left: 30px;
+    left: 31px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
@@ -89,26 +111,29 @@
   /* The actual content */
   .content {
     padding: 20px 30px;
-    background-color: white;
+    background-color: var(--main-color);
+    box-shadow: 5px 5px 10px rgba(196, 156, 109, 0.5);
+    border: 2px solid white;
     position: relative;
     border-radius: 6px;
   }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
+
+ /* 
+Media queries - Responsive timeline on screens less than 600px wide 
+@media screen and (max-width: 600px) {
+    Place the timelime to the left 
     .timeline::after {
     left: 31px;
     }
     
-    /* Full-width containers */
+    Full-width containers
     .container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
     }
     
-    /* Make sure that all arrows are pointing leftwards */
+    Make sure that all arrows are pointing leftwards 
     .container::before {
     left: 60px;
     border: medium solid white;
@@ -116,13 +141,16 @@
     border-color: transparent white transparent transparent;
     }
   
-    /* Make sure all circles are at the same spot */
+    Make sure all circles are at the same spot
     .left::after, .right::after {
     left: 15px;
     }
     
-    /* Make all right containers behave like the left ones */
+    Make all right containers behave like the left ones
     .right {
     left: 0%;
     }
+
   }
+
+*/
